Fix overflow oops
That overflow should have only hid x

--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ body {
   justify-content: center;
   max-width: 100vw;
   min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
